# cmake-configure

./: README.md  configure  run_test.sh
test/: CMakeLists.txt  hello.cpp
